# ST7567-ESP32_CLOCK

./: README.md  sdkconfig
components/DHT20/include/: DHT20.h
components/DHT20/src/: DHT20.c
components/adc_reader/: CMakeLists.txt
components/adc_reader/include/: adc_reader.h
components/adc_reader/src/: adc_reader.c
components/clock_module/include/: clock_module.h
components/clock_module/src/: clock_module.c
components/device_common/: CMakeLists.txt
components/device_common/include/: device_common.h
components/device_common/src/: device_common.c  device_gpio.c
components/device_task/: CMakeLists.txt
components/device_task/include/: device_task.h
components/device_task/src/: device_task.c
components/forecast_http_client/: CMakeLists.txt
components/forecast_http_client/include/: forecast_http_client.h
components/forecast_http_client/src/: forecast_http_client.c
components/periodic_task/include/: periodic_task.h
components/periodic_task/src/: periodic_taks.c
components/screen_handler/: CMakeLists.txt
components/screen_handler/src/: screen_handler.c
components/setting_server/: CMakeLists.txt
components/setting_server/embedded_files/: index.html  script.js  style.css
components/setting_server/include/: setting_server.h
components/setting_server/src/: setting_server.c
components/sound_generator/src/: sound_generator.c
components/st7567/: CMakeLists.txt
components/st7567/include/: fontlibrary.h  lcd.h
components/st7567/src/: font.c  font.h  lcd.c
components/toolbox/include/: toolbox.h
main/: CMakeLists.txt  main.c
(+4 files in other folders)
